# Twitter-sentiment-analysis

./: README.md
Architecture Design/: 2.Architecture_Sentiment_Analysis2.docx
Documentation/: 13.Amazon Food Reviews IEEE.docx  IEEE Abstract.rtf.docx
MLAI Crash Course - ExpertsHub/: 01. Crash Course on Python 3.ipynb  02. End to End.ipynb  03. Boolean Filters.ipynb  04. Regression.ipynb  05. Classification.ipynb  06. SVM.ipynb  07. Ensemble.ipynb  08. Introduction to Tensorflow.ipynb  09. NN.ipynb  10. CNN.ipynb
Presentation/: 13.Emo-Sensing.pptx
Sentiment Analysis Exercsies/: WEEK 2 ANALYSIS AND OBSERVATIONS.docx
Sentiment Analysis Exercsies/Airline Sentiment Analysis/: Airline Sentiment Analysis-Copy1.ipynb  Airline Sentiment Analysis.ipynb  Airline_Sentiment_Analysis.ipynb  airline_sentiment_analysis.py
Sentiment Analysis Exercsies/MoneyBall/: Linear_Models.html  Linear_Models.ipynb  Project Moneyball.ipynb  instructions
Sentiment Analysis Models/: Authentication and Visualisation.py  NaiveBayes Classifier model_1.py  NaiveBayes Classifier model_2.py  Streaming Twitter Tweets.py  pyproject.toml
